Fix layout bug on leaderboard

--- a/app/javascript/packs/application.scss
+++ b/app/javascript/packs/application.scss
@@ -28,9 +28,15 @@ body {
     max-width: 300px;
   }
   .btn {
-    margin-top: 10px;
-    position: relative;
-    top: 50px;
+    margin-top: 30px;
+    width: 150px;
+    opacity: 0.5;
+    &.left {
+      float: left;
+    }
+    &.right {
+      float: right;
+    }
   }
 }
 
